Fix the overlaping of search icon

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -735,6 +735,11 @@ div.search-facet:focus-within {
   }
 }
 
+@media only screen and (max-width: 25em) {
+  .search-bar-component{
+    margin-right: 15px;
+  }
+}
 
 // We should review this media query to determine if it is in fact needed.
 @media only screen and (min-width: 25em) {  
